# MoveForge

./: .gitignore  .vercelignore  CONTRIBUTING.md  Cargo.toml  DEMO_SCRIPT.md  Dockerfile  HACKATHON_SUBMISSION.md  LICENSE  README.md  README_VERCEL_DEPLOY.md  VIDEO_DEMO_SCRIPT.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: analyze.rs  deploy.rs  deploy_real.rs  init.rs  mod.rs  node.rs  sim.rs  test.rs
core/: Cargo.toml
core/src/: lib.rs  movement_client.rs  node.rs  rpc.rs  state.rs  types.rs
examples/: Move.toml
examples/contracts/: defi_swap.move  hybrid_bridge.sol  nft_mint.move
examples/scripts/: test_parallel.json
frontend/: package-lock.json  package.json
frontend/config/: index.tsx
frontend/context/: index.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: metrics-display.tsx  simulation-panel.tsx  transaction-list.tsx
scripts/: build.sh  demo.sh  deploy_demo.sh  install.sh
sdk/: README.md  package.json
sdk/src/: client.ts  index.ts  simulation.ts  transaction.ts  types.ts  wallet.ts
simulator/: Cargo.toml
simulator/src/: lib.rs
stacks/dao-governance/: Clarinet.toml  package.json
stacks/name-registry/: Clarinet.toml  package.json
stacks/oracle-registry/: Clarinet.toml  package.json
stacks/passkey-auth/: Clarinet.toml  README.md  package.json
stacks/prediction-market/: Clarinet.toml  package.json
stacks/reputation-system/: Clarinet.toml  package.json
stacks/staking-rewards/: Clarinet.toml  package.json  test-interaction.clar
stacks/subscription-service/: Clarinet.toml  package.json
stacks/timelock-vault/: Clarinet.toml  README.md
stacks/tipping-platform/: Clarinet.toml  README.md
stacks/token-vesting/: Clarinet.toml  package.json
stacks/yield-aggregator/: Clarinet.toml  README.md
(+13 files in other folders)
