[package]
name = "moveforge-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
reqwest = { version = "0.11", features = ["json"] }
dashmap = "5.5"
sha2 = "0.10"
hex = "0.4"
