[package]
name = "moveforge-simulator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
moveforge-core = { path = "../core" }
rayon = "1.8"
